--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -18,7 +19,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.19.5",
     "lucide-react": "^0.477.0",
-    "motion": "^12.4.10",
+    "motion": "^12.5.0",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
